--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   liquid_pull_to_refresh: ^3.0.1
   clipboard: ^0.1.3
   auto_size_text: ^3.0.0
+  curved_navigation_bar: ^1.0.3
+  sqflite: ^2.3.0
+  flutter_tts: ^3.8.3
 
 dev_dependencies:
   flutter_test:
